# waterbodies

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  compose.yaml  default.nix  environment.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: create_new_tag.yml  test.yml
styling/sld_v1_0/: waterbodies_pc_wet_rules.sld
styling/sld_v1_1/: waterbodies_pc_wet_rules.sld
waterbodies/: db_models.py  historical_extent.py  utils.py
waterbodies/cli/historical_extent/: get_uids.py  main.py  process_tasks.py  rasterise_polygons.py  split_hydrosheds_land_mask.py  update_dynamic_attrs.py
waterbodies/cli/surface_area_change/: process_tasks.py
