[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "waterbodies"
# version = "0.0.1"
authors = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
maintainers = [{name = "Digital Earth Africa", email = "systems@digitalearthafrica.org"}]
description = "DE Africa waterbodies"
readme =  {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "click",
    "datacube[s3, performance]==1.8.20",
    "fsspec",
    "geoalchemy2",
    "geopandas[all]",
    "numpy",
    "odc-dscache",
    "odc-geo",
    "odc-stats",
    "pandas==2.1.4", # due to sqalchemy dependency for datacube 1.8.x,
    "python-dotenv",
    "python-geohash",
    "rasterio",
    "rioxarray",
    "s3fs",
    "scikit-image",
    "sqlalchemy",
    "alembic",
    "toolz",
    "tqdm",
    "xarray[complete]",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
    "odc-apps-dc-tools",
]
lint = [
    "black[jupyter]",
    "flake8",
    "mypy",
    "isort>=5.0.0",
    "pre-commit",
]
viz = ["lxml"]
dev = ["waterbodies[tests, lint, viz]"]

[project.urls]
Repository = "https://github.com/digitalearthafrica/waterbodies.git"
"Bug Tracker" = "https://github.com/digitalearthafrica/waterbodies/issues"

[project.scripts]
waterbodies = "waterbodies.cli.main:waterbodies"

[tool.setuptools]
packages = ["waterbodies"]

[tool.setuptools.dynamic]
version = {attr = "waterbodies.__version__"}

[tool.setuptools_scm]
version_file = "waterbodies/_version.py"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"